--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h1>hello, world</h1>
     <a href="about.html">About this project</a>
     <p>Call me Ishmael.</p>
-    <img src="https://www.flickr.com/photos/28883788@N04/10097824543">
+    <img src="https://www.flickr.com/photos/28883788@N04/10097824543" alt="Whale">
   </body>
 </html>
